# Utility-contracts

./: .gitignore  AUDIT_READY_RUNBOOK.md  CONTRIBUTING.md  EMERGENCY_RUNBOOK.md  IMPLEMENTATION_CHECKLIST.md  README.md  SECURITY.md  SETTLEMENT_IMPLEMENTATION.md  main.rs  sanity_check.sh
.github/workflows/: ci.yml
contracts/: Cargo.toml
contracts/common/: Cargo.toml
contracts/meter-aggregator/: Cargo.toml  README.md
contracts/meter-aggregator/src/: constants.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/meter-aggregator/test_snapshots/test/: test_daily_bucket_fast_path.1.json  test_double_initialize_panics.1.json  test_hour_rollup_correctness.1.json  test_initialize_and_admin.1.json  test_negative_value_rejected.1.json  test_overflow_aggregation_is_rejected.1.json  test_prune_batch_size_limit.1.json  test_prune_retention_boundary.1.json  test_rollup_day_reclaims_hourly_but_keeps_total.1.json  test_storage_exhaustion_prevention.1.json
contracts/resource-token/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  build_output.txt  final_test_results.txt  test_output.txt  test_results.txt
contracts/settlement/: Cargo.toml
contracts/utility_contracts/: COMPILATION_STATUS.md  STORAGE_VERSIONING_FIXES.md  fix_sdk_migration.md
docs/: BLOCK_EXPLORER_GUIDE.md  ESP32_SECURE_KEY_STORAGE.md  UTILITY_ERRORS.md
examples/: insurance_pool_demo.rs
meter-simulator/: README.md  TYPESCRIPT_BINDINGS.md  package.json  test-validation.js
scripts/: DEPLOY_README.md  deploy.sh  validate_doc_comments.rs
usage-dashboard/: README.md  package.json
(+118 files in other folders)
